# yijing_oracle

./: .gitignore  00_prototype_v3.ipynb  00_test_yijing_v0.ipynb  00_testing_v1.ipynb  00_testing_v1.py  00_testing_v2.ipynb  01_claude_yijing_v0.ipynb  01_code_review.ipynb  01_testing_oracle_v1.ipynb  README.md  config.py  coverage_analysis.py  projektstruktur.txt  pyproject.toml  test_yijing.ipynb  workbook.ipynb  y.ipynb  yijing_data_management_v01.ipynb  yijing_text_extrection_v3.ipynb
YijingGenerator/: __init__.py  config.py  hypergram.py  main.py  models.py  oracle.py  oracle_v0.py
notebooks/: 01_claude_yijing_v0.ipynb  01_testing_oracle_v1.ipynb  02_yijing_data_management_v01.ipynb  test_yijing.ipynb  x copy.py  yijing_text_extrection.ipynb
tests/: conftest.py
tests/test_core/: test_critical_paths.py  test_oracle_async.py
yijing/: __init__.py  config.py  constants.py  enums.py  exceptions.py  hypergram.py  interpretations.py  managers.py  models.py  oracle.py  settings.py  update_templates.zsh  utils.py
yijing/config/: __init__.py  settings.py
yijing/config/prompts/: system_prompt.txt
yijing/core/: __init__.py  generator.py  loader.py  manager.py  oracle.py
yijing/models/: __init__.py  contexts.py  hexagrams.py  lines.py
yijing/resources/: dialogue_mode_prompt.txt  trigrams.json  yijing.txt  yijing_json_extrection_example.json
yijing/resources/hexagram_json/: hexagram_01.json  hexagram_02.json  hexagram_03.json  hexagram_04.json  hexagram_05.json  (+59 more)
yijing/utils/: __init__.py  formatting.py  resource_loader.py  validate_resources.py
(+10 files in other folders)
