[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yijing-oracle"
version = "0.1.0"
description = "I Ching divination system with AI-powered interpretation"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.8"
authors = [
    { name = "JayKay", email = "your.email@example.com" }
]
dependencies = [
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_unused_configs = true